--- a/src/host/layer23/.gitignore
+++ b/src/host/layer23/.gitignore
@@ -36,6 +36,8 @@ src/misc/ccch_scan
 src/misc/layer23
 src/misc/burst_decode
 src/misc/burst_encode
+src/misc/captures/*.pcap
+src/misc/captures/*.dat
 src/misc/*.dat
 src/misc/cell_log_*
 src/misc/KC
